[gd_scene load_steps=3 format=3 uid="uid://3alikpojdosu"]

[ext_resource type="Script" path="res://Scenes/Quests/npc_1_quest.gd" id="1_5o48j"]
[ext_resource type="Texture2D" uid="uid://drpvlidg513r3" path="res://Assets/Mideval/UI/Banners/Banner_Connection_Right.png" id="1_6lvrk"]

[node name="npc1_quest" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5o48j")

[node name="quest1_ui" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -53.0
offset_top = -69.0
offset_right = 73.0
offset_bottom = -13.0
texture = ExtResource("1_6lvrk")
region_rect = Rect2(45, 45, 147, 127)

[node name="name" type="RichTextLabel" parent="quest1_ui"]
self_modulate = Color(0.352941, 0.027451, 0.435294, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 159.0
offset_bottom = 24.0
scale = Vector2(0.4, 0.4)
text = "Mage's Quest"
scroll_active = false

[node name="text" type="RichTextLabel" parent="quest1_ui"]
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 13.0
offset_right = 214.0
offset_bottom = 78.0
scale = Vector2(0.4, 0.4)
theme_override_font_sizes/normal_font_size = 13
text = "Solve the Mage's riddle for a path-clearing wand?"

[node name="yesButton1" type="Button" parent="quest1_ui"]
modulate = Color(0.341176, 0.909804, 0.686275, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 28.0
offset_right = 44.0
offset_bottom = 59.0
scale = Vector2(0.4, 0.4)
text = "yes"

[node name="noButton2" type="Button" parent="quest1_ui"]
modulate = Color(0.960784, 0.239216, 0.447059, 1)
layout_mode = 0
offset_left = 27.0
offset_top = 28.0
offset_right = 61.0
offset_bottom = 59.0
scale = Vector2(0.4, 0.4)
text = "no"

[node name="no_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -53.0
offset_top = -69.0
offset_right = 73.0
offset_bottom = -13.0
texture = ExtResource("1_6lvrk")
region_rect = Rect2(45, 45, 147, 127)

[node name="name" type="RichTextLabel" parent="no_quest"]
self_modulate = Color(0.352941, 0.027451, 0.435294, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 159.0
offset_bottom = 24.0
scale = Vector2(0.4, 0.4)
text = "Mage's Quest"
scroll_active = false

[node name="text" type="RichTextLabel" parent="no_quest"]
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 13.0
offset_right = 214.0
offset_bottom = 78.0
scale = Vector2(0.4, 0.4)
theme_override_font_sizes/normal_font_size = 13
text = "No current quest to complete right now."

[node name="finished_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -53.0
offset_top = -69.0
offset_right = 73.0
offset_bottom = -13.0
texture = ExtResource("1_6lvrk")
region_rect = Rect2(45, 45, 147, 127)

[node name="name" type="RichTextLabel" parent="finished_quest"]
self_modulate = Color(0.352941, 0.027451, 0.435294, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 159.0
offset_bottom = 24.0
scale = Vector2(0.4, 0.4)
text = "Mage"
scroll_active = false

[node name="text" type="RichTextLabel" parent="finished_quest"]
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 13.0
offset_right = 214.0
offset_bottom = 78.0
scale = Vector2(0.4, 0.4)
theme_override_font_sizes/normal_font_size = 13
text = "Well done, my friend!"

[connection signal="pressed" from="quest1_ui/yesButton1" to="." method="_on_yes_button_1_pressed"]
[connection signal="pressed" from="quest1_ui/noButton2" to="." method="_on_no_button_2_pressed"]
